added angular material + table sort

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-<h1>Приложение</h1>
 </div>
-
-<table>
-  <tr>
-    <th (click)="getAll()">Выбрать</th>
-    <th click="sortItems()">Категория</th>
-    <th click="sortItems()">Товар</th>
-    <th click="sortItems()">Цена</th>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-</table>
-
-<button (click)="getGoods()">В корзину</button>
+<app-product-table></app-product-table>
 
